🎨 just wanted to fix linking to external files and fixing the overflow that was occurring

--- a/Site/simple-grid.css
+++ b/Site/simple-grid.css
@@ -45,6 +45,7 @@ body {
   left: 0;
   top: 0;
   font-size: 100%;
+  overflow: hidden;
 }
 
 /* ROOT FONT STYLES */
